@@ -1,5 +1,9 @@
 2011-10-28  Andreas Schwab  <schwab@redhat.com>
 
+	* sysdeps/i386/i686/multiarch/strnlen-c.c (libc_hidden_def): Only
+	redefine if SHARED.
+	* sysdeps/i386/i686/multiarch/wcscmp-c.c (libc_hidden_def): Likewise.
+
 	* sysdeps/i386/i686/multiarch/Makefile (sysdep_routines): Move
 	wide char related routines to wcsmbs subdir.
 
